Attempt to fix problems caused by headers in links
Without these changes, the front page looks wrong.

Also, multiple H1s on a page (like the Download page) looks
wrong without these changes.

--- a/views/styles.sass
+++ b/views/styles.sass
@@ -222,7 +222,7 @@ body
       margin-left: -1.5em
 
   h1:first-child
-    margin-top: 0
+    margin-top: 20px
 
 #comments
   margin-top: 15px
@@ -292,7 +292,7 @@ body
       font-weight: bold
 
 .columns
-  $margin: 20px
+  $margin: 0
 
   @include clearfix
 
